--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src --max-warnings=0"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -63,8 +63,15 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-cypress": "^3.6.0",
+    "eslint-plugin-import-helpers": "^2.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-config-next": "14.2.23",
     "postcss": "^8",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
