--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
+    "motion": "^12.0.5",
     "next": "14.2.23",
     "next-themes": "^0.4.4",
     "react": "^18",
@@ -63,13 +64,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
+    "eslint-config-next": "14.2.23",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-cypress": "^3.6.0",
     "eslint-plugin-import-helpers": "^2.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-config-next": "14.2.23",
     "postcss": "^8",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.4.1",
